; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/ar71xx/files/drivers/gpio/extr_gpio-latch.c_gpio_latch_get.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/ar71xx/files/drivers/gpio/extr_gpio-latch.c_gpio_latch_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gpio_chip = type { i32 }
%struct.gpio_latch_chip = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gpio_chip*, i32)* @gpio_latch_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gpio_latch_get(%struct.gpio_chip* %0, i32 %1) #0 {
  %3 = alloca %struct.gpio_chip*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.gpio_latch_chip*, align 8
  %6 = alloca i32, align 4
  store %struct.gpio_chip* %0, %struct.gpio_chip** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.gpio_chip*, %struct.gpio_chip** %3, align 8
  %8 = call %struct.gpio_latch_chip* @to_gpio_latch_chip(%struct.gpio_chip* %7)
  store %struct.gpio_latch_chip* %8, %struct.gpio_latch_chip** %5, align 8
  %9 = load %struct.gpio_latch_chip*, %struct.gpio_latch_chip** %5, align 8
  %10 = call i32 @gpio_latch_lock(%struct.gpio_latch_chip* %9, i32 0)
  %11 = load %struct.gpio_latch_chip*, %struct.gpio_latch_chip** %5, align 8
  %12 = getelementptr inbounds %struct.gpio_latch_chip, %struct.gpio_latch_chip* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = load i32, i32* %4, align 4
  %15 = zext i32 %14 to i64
  %16 = getelementptr inbounds i32, i32* %13, i64 %15
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @gpio_get_value(i32 %17)
  store i32 %18, i32* %6, align 4
  %19 = load %struct.gpio_latch_chip*, %struct.gpio_latch_chip** %5, align 8
  %20 = call i32 @gpio_latch_unlock(%struct.gpio_latch_chip* %19, i32 0)
  %21 = load i32, i32* %6, align 4
  ret i32 %21
}

declare dso_local %struct.gpio_latch_chip* @to_gpio_latch_chip(%struct.gpio_chip*) #1

declare dso_local i32 @gpio_latch_lock(%struct.gpio_latch_chip*, i32) #1

declare dso_local i32 @gpio_get_value(i32) #1

declare dso_local i32 @gpio_latch_unlock(%struct.gpio_latch_chip*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
